# TimeTableBot

./: LICENSE  cheat_data.py  classes_data.py  main.py  pyproject.toml
