[tool.poetry]
name = "timetablebot"
version = "0.1.0"
description = ""
authors = ["SaicharanKandukri hello.1x1.sai@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
